# nushell

./: Cargo.toml  features.toml
crates/nu-parser/src/: commands.rs
crates/nu-parser/src/commands/classified/: external.rs
crates/nu-parser/src/hir/: expand_external_tokens.rs  syntax_shape.rs
crates/nu-parser/src/hir/baseline_parse/: tests.rs
crates/nu_plugin_ps/: Cargo.toml
crates/nu_plugin_ps/src/: main.rs
src/: cli.rs  commands.rs  errors.rs  lib.rs  prelude.rs  traits.rs
src/commands/: classified.rs  command.rs  get.rs  to_csv.rs  to_tsv.rs
src/data/: base.rs  dict.rs  meta.rs
src/data/base/: debug.rs  shape.rs
src/parser/: hir.rs  parse_command.rs  registry.rs
src/parser/hir/: binary.rs  expand_external_tokens.rs  path.rs  syntax_shape.rs  tokens_iterator.rs
src/parser/hir/baseline_parse/: tests.rs
src/parser/hir/syntax_shape/: block.rs  expression.rs
src/parser/hir/syntax_shape/expression/: atom.rs  delimited.rs  list.rs  pattern.rs  unit.rs  variable_path.rs
src/parser/hir/tokens_iterator/: debug.rs
src/parser/hir/tokens_iterator/debug/: color_trace.rs  expand_trace.rs
src/parser/parse/: flag.rs  parser.rs  pipeline.rs  token_tree.rs  tokens.rs  unit.rs
src/plugins/: inc.rs  textview.rs
src/shell/: helper.rs
tests/: command_get_tests.rs  commands_test.rs  filters_test.rs
tests/shell/: mod.rs
