[package]
name = "nu_plugin_ps"
version = "0.7.0"
authors = ["Yehuda Katz <wycats@gmail.com>", "Jonathan Turner <jonathan.d.turner@gmail.com>", "Andrés N. Robalino <andres@androbtech.com>"]
edition = "2018"
description = "A process list plugin for Nushell"
license = "MIT"

[dependencies]
nu-plugin = { path = "../nu-plugin", version="0.7.0" }
nu-protocol = { path = "../nu-protocol", version = "0.7.0" }
nu-source = { path = "../nu-source", version = "0.7.0" }
nu-errors = { path = "../nu-errors", version = "0.7.0" }

heim = "0.0.9"
pin-utils = "0.1.0-alpha.4"
tokio = { version = "0.2", features = ["rt-core", "stream"] }

[build-dependencies]
nu-build = { version = "0.7.0", path = "../nu-build" }
